	* #2163: Fix unable add torrent file with empty (0:) encoding tag
	* #2201: Fix error in authmanager if auth file has extra newlines
	* #2109: Fix the Proxy settings not being cleared by setting None
	* #2110: Fix accepting magnet uris with xt param anywhere within them
	* #2204: Fix daemon shutdown hang with large numbers of torrents

==== Client ====
	* Fix keyerrors after removing torrents from UIs

==== GtkUI ====
	* Add move completed option to add torrent dialog
	* Prevent jitter in torrent view
	* Fix torrent creation with non-ascii characters
	* Fix #2100 : Add option not to bring main window to front when adding torrents through ipcinterface
	* Add Quit Dialog when toggling classic mode in preferences and only show connection manager when not in classic mode.
	* #2169: Fix 'Download Location' in the Add Torrent Dialog not set correctly when folder typed into Other->Location field
	* #2171: Fix the Add Peer dialog not responding if empty or invalid values entered
	* #2104: Fix no title set for the appindicator
	* #2086: Fix submenus and icons for appindicator
	* #2146: Fix missing translations in View|Tabs submenu
	* Fix torrent names on libtorrent 0.16 on windows
	* #2147: Fix missing translations for plugin preferences page
	* #1474: Fix the on_show_prefs hook not being executed immediatly after enabling a plugin
	* #1946: Fix ReactorNotRestartable error when set as startup application
	* #2130: Fix same name can be given to different files in Add Torrent dialog
	* #2129: Fix empty filename able to be set in AddTorrent dialog
	* #2228: Fix Apply-To-All in AddTorrent Dialog copying file renames to other torrents

==== Console ====
	* LP#1004793: Enable use of connect command in non-interactive mode
	* Ensure console commands are executed in order
	* #2065: Fix crash with missing closing quote
	* #1397: Add support for -s STATE in info command

==== WebUI ====
	* Add move completed option to add torrent dialog